2014.07.24 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Code refactoring (QRinput_Struct_count has been added).
	  - And more code cleanups.
	* qrinput.c, qrencode.1.in:
	  - Added new option, "verbose".

2014.06.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c, qrencode.1.in:
	  - Merged pull-request #44. (Thanks to Antenore)
	  - Fixed some format issues.

2014.06.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrencode.c:
	  - A memory leak bug has been fixed. (Thanks to @win32asm)

2014.02.09 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* .travis.yaml:
	  - Configuration file for Travis CI. (Thanks to Danil Dörrhöfer)
	* configure.ac:
	  - Fixed some warnings.

2014.01.15 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merged pull request 78d44fd - commandline argument --help and -V is
	    printed to stdout, instead of stderr.

2014.01.04 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* rsecc.[ch]:
	  - Code cleanups.

2013.10.27 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrinput.c:
	  - Bug in QRinput_insertFNC1Header() has been fixed. (Thanks to David
	    Binderman)
	* qrinput.c, test/decoder.[ch]:
	  - Code cleanup.

2013.09.08 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/test_qrencode.c:
	  - Small bug fix.

2013.09.06 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* qrenc.c:
	  - bzero() has been replaced with memset(). (Thanks to Gavin Andresen)
	* qrspec.c, qrinput.c:
	  - QRspec_getMinimumVersion() now returns maximum version number for
	    excessive input, instead of -1. Closes #31. (Thanks to Danil
		Dörrhöfer)
	* tests/test_qrencode.c:
	  - New tests for excessive or maximum input have been added.
	* tests/test_qrinput.c:
	  - A deprecatd test has been removed.
	[reduce_malloc]
	* bitstream.c:
	  - Minimum length of bit buffer has been extended to 128. In many cases
	    the library needs 128 bits at least to generate a symbol.
	[master]
	* merged reduce_malloc branch.

2013.08.22 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* configure.ac: